1998-03-11  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/cf/aliases.cf:
	    Backed off some changes; pushed too much into bitbucket :-(

	* transports/smtp/smtp.c:
	    Alexis Yushin reported that BDAT didn't work in non-pipelined
	    mode :-(  Corrected that.

1998-03-10  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/cf/aliases.cf, proto/cf/rrouter.cf, proto/cf/fqdnaliases.cf:
	    Rewamped $(rrouter ..) and some other scripts after reports
	    regarding mysterious problems with $PUNTHOST.

	* include/shmmib.h, scheduler/prototypes.h, scheduler/scheduler.c,
	  scheduler/scheduler.h, scheduler/update.c:
	    Hooks/preparations for RFC 2249

	* smtpserver/smtpdata.c:
	    Some anti-spam hacks merged in

1998-03-04  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    Correction to EHLO SIZE processing, aborting message sending
	    if the remote system presents a size limit, and current message
	    size estimate exceeds that value.  Corrections to the way, how
	    active smtp socket peer IP addresses are presented for diagnostic
	    reports.

1998-03-03  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    Smarter processing for PIPELINING error reports;
	    if PIPELINING mode yields error on MAIL FROM, use
	    that report at all RCPT TO lines.
	    Also support multiline reports from remote servers
	    (up to a few kilobytes long..)

	* smtpserver/smtpserver.h, smtpserver/smtpserver.c,
	  smtpserver/Makefile.in, smtpserver/policytest.h,
	  smtpserver/smtpdata.c, smtpserver/contentpolicy.h,
	  include/mail.h.in, include/policy.h:
	    - Modified several multi-line policy report messages
	      into a narrower form with same text folded on
	      shorter lines
	    - Added hooks for  contentpolicy()  function that
	      will be able to analyze file content for possible
	      acceptable content issues ("SPAM"...)

	* libc/mail.c: mail_fname(FILE * mfp)
	    A new function returning filename of currently open